fix overflow bug

--- a/css/css.css
+++ b/css/css.css
@@ -11,6 +11,7 @@ html,body{
     width:100%;
 	background-color: #66ccff;
     position: relative;
+	overflow: hidden;
 }
 #duang{
 	height: 100%;
